fix: Increased contrast for restaurant name color

--- a/src/scss/restaurant-details.scss
+++ b/src/scss/restaurant-details.scss
@@ -264,7 +264,7 @@ nav {
 } /* .inside */
 
 .restaurant-name {
-	color: #C7781B;
+	color: #A66317;
 	display: inline-block;
 	font-size: 20px;
 	font-weight: 400;
